cabal-version:       >=1.10
name:                quandl-api-v3
version:             0.1.0.0
license-file:        LICENSE
author:              Yves Hauser
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
                       Data.Quandl
  build-depends:       base >=4.13
                     , aeson >=2.0.0.0
                     , async
                     , http-client
                     , http-client-tls
                     , http-media
                     , lens
                     , mtl
                     , servant
                     , servant-client
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:       -Wall
